syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

enum MapMarkPointType {
	MAP_MARK_POINT_TYPE_NPC = 0;
	MAP_MARK_POINT_TYPE_QUEST = 1;
	MAP_MARK_POINT_TYPE_SPECIAL = 2;
	MAP_MARK_POINT_TYPE_MINE = 3;
	MAP_MARK_POINT_TYPE_COLLECTION = 4;
	MAP_MARK_POINT_TYPE_MONSTER = 5;
	MAP_MARK_POINT_TYPE_FISH_POOL = 6;
}
